tests/test0194.exp
Parse error, unexpected ≔ ( tests/test0194.ctr: 2 )
Invalid left-hand assignment.
