tests/test0194.ctr
'SINGLE_LANGUAGE'.
2 := 1.

